--- a/css/styles.css
+++ b/css/styles.css
@@ -1,8 +1,3 @@
-.container{
-  font-weight: bold;
-  font-style: italic;
-}
-
 h1{
   text-align: center;
   color: blue;
@@ -18,4 +13,11 @@ p{
 
 h3{
   text-decoration: underline;
+}
+.card{
+  background-image: url("https://www.thoughtco.com/thmb/zWdCc2iR_RETV6s6dVabpKN9GC0=/768x0/filters:no_upscale():max_bytes(150000):strip_icc()/173333692-56a142325f9b58b7d0bd89ae.jpg");
+  background-position: center;
+  font-weight: bold;
+  font-style: italic;
+  text-shadow: 1px 1px 2px red, 0 0 1em blue, 0 0 0.2em blue;
 }
