Change .card to .sheria

--- a/css/styles.css
+++ b/css/styles.css
@@ -14,7 +14,7 @@ p{
 h3{
   text-decoration: underline;
 }
-.card{
+.sheria{
   background-image: url("https://www.thoughtco.com/thmb/zWdCc2iR_RETV6s6dVabpKN9GC0=/768x0/filters:no_upscale():max_bytes(150000):strip_icc()/173333692-56a142325f9b58b7d0bd89ae.jpg");
   background-position: center;
   font-weight: bold;
