--- a/css/styles.css
+++ b/css/styles.css
@@ -16,3 +16,8 @@ h3{
   font-style: italic;
   text-shadow: 1px 1px 2px red, 0 0 1em blue, 0 0 0.2em blue;
 }
+
+h4{
+  text-align: center;
+  text-decoration: underline;
+}
