--- a/css/styles.css
+++ b/css/styles.css
@@ -15,9 +15,14 @@ h3{
   font-weight: bold;
   font-style: italic;
   text-shadow: 1px 1px 2px red, 0 0 1em blue, 0 0 0.2em blue;
+  padding: 10%;
 }
 
 h4{
   text-align: center;
   text-decoration: underline;
+}
+
+.container{
+  background-image: url("https://upload.wikimedia.org/wikipedia/commons/3/31/Pass_pigs_dice.jpg");
 }
