--- a/css/styles.css
+++ b/css/styles.css
@@ -16,6 +16,7 @@ h3{
   font-style: italic;
   text-shadow: 1px 1px 2px red, 0 0 1em blue, 0 0 0.2em blue;
   padding: 10%;
+  padding-bottom: 30px;
 }
 
 h4{
